# practica

fibonacci/: CMakeLists.txt
fibonacci/dlopen_test/: dlopen_test.c
fibonacci/include/: fibonacci.h
fibonacci/src/: fibonacci.c  fibonacci_recursive.c  main.c
fibonacci/test/: speed_test.c
train/: CMakeLists.txt  main.c
train/include/: database.h
